2007-05-29 [colin]	2.9.2cvs16

	* src/imap.c
		Fix loss of local flags when moving mails
		on IMAP in high-bandwidth mode (UID FETCH)

2007-05-25 [paul]	2.9.2cvs15

	* src/common/socket.c
		fix sometimes crasher on cancelling
		message sending

2007-05-25 [colin]	2.9.2cvs14

	* src/imap.c
		Fix a memory leak
	* src/imap_gtk.c
		Be more helpful in the subscription
		message

2007-05-23 [wwp]	2.9.2cvs13

	* src/compose.c
	* src/prefs_compose_writing.c
	* src/prefs_quote.c
	* src/prefs_template.c
	* src/prefs_template.h
	* src/quote_fmt.c
	* src/quote_fmt.h
	* src/quote_fmt_lex.l
	* src/quote_fmt_parse.y
		Introduced new syntax elements (symbols and commands)
		in templates/quote_fmt. Compatibility w/ old
		symbols is kept.
		Updated and reworked the corresponding Information
		dialog.
		Display the line number in dialogs that talk about
		parser errors (in addition to the error message in
		output).

2007-05-23 [wwp]	2.9.2cvs12

	* src/quote_fmt_parse.y
		Fix 2.9.2cvs11, probably a paste accident ;).

2007-05-23 [wwp]	2.9.2cvs11

	* src/compose.c
	* src/prefs_template.c
	* src/quote_fmt.h
	* src/quote_fmt_parse.y
		Fix 2.9.2cvs10, which broke --disable-aspell.

2007-05-22 [wwp]	2.9.2cvs10

	* src/compose.c
	* src/prefs_template.c
	* src/quote_fmt.c
	* src/quote_fmt.h
	* src/quote_fmt_lex.l
	* src/quote_fmt_parse.y
	* src/gtk/gtkaspell.c
	* src/gtk/gtkaspell.h
		Added template/quote format syntactical elements
		to show and query:
			- current dictionary
			  %T to show (shows empty if not set or not enabled),
			  ?T and !T to check if the default dictionary is
			  enabled and set
			- current account's default dictionary
			  %aT to show (empty if not set or not enabled),
			  ?aT and !aT to check if it's enabled and set
			- name completion for an address, from the address
			  book
			  %ABf, %ABt, %ABc respectively show the full name got
			  from the address book if From, To or Cc match a single
			  contact.