@@ -2592,3 +2592,4 @@
 ( cvs diff -u -r 1.179.2.173 -r 1.179.2.174 src/imap.c;  cvs diff -u -r 1.1.2.45 -r 1.1.2.46 src/imap_gtk.c;  ) > 2.9.2cvs14.patchset
 ( cvs diff -u -r 1.13.2.31 -r 1.13.2.32 src/common/socket.c;  ) > 2.9.2cvs15.patchset
 ( cvs diff -u -r 1.179.2.174 -r 1.179.2.175 src/imap.c;  ) > 2.9.2cvs16.patchset
+( cvs diff -u -r 1.23.2.23 -r 1.23.2.24 src/crash.c;  cvs diff -u -r 1.207.2.162 -r 1.207.2.163 src/folderview.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/ldapupdate.c;  ) > 2.9.2cvs17.patchset
